[package]
name = "ruspiro-arch-aarch64"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.3" # remember to update html_root_url in lib.rs
description = """
This crate provides access to Aarch64 system registers as well as specific usefull aarch64 assembly instructions
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-arch-aarch64/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-arch-aarch64/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro", "aarch64", "register"]
edition = "2018"
exclude = [".travis.yml", "Makefile.toml"]

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-arch-aarch64", branch = "release" }
maintenance = { status = "actively-developed" }

[lib]

[build-dependencies]
# uncomment this if a build.rs script should be run as part of the build process
# cc = "1.0"

[dependencies]
ruspiro-register = "0.5"

[features]
ruspiro_pi3 = [ ]

[patch.crates-io]
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "master" }
