[package]
name = "ruspiro-arch-aarch64"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.1.7" # remember to update html_root_url in lib.rs
description = """
This crate provides access to Aarch64 system registers as well as specific usefull aarch64 assembly instructions
"""
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/RusPiRo/ruspiro-arch-aarch64/tree/v||VERSION||"
documentation = "https://docs.rs/ruspiro-arch-aarch64/||VERSION||"
categories = ["no-std", "embedded"]
keywords = ["ruspiro", "aarch64", "register"]
edition = "2021"
exclude = ["Makefile.toml", ".cargo/config.toml"]

[badges]
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-register = "~0.5.5"

[package.metadata.docs.rs]
default-target = "aarch64-unknown-linux-gnu"
features = []

[patch.crates-io]
ruspiro-register = { git = "https://github.com/RusPiRo/ruspiro-register.git", branch = "development" }
